# MaiMBot-LPMM

./: .gitignore  Readme.md  config.toml  global_logger.py  info_extraction.py  main.py  requirements.txt
.github/workflows/: build_dist.yml  pytest.yml
lib/quick_algo/: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  build_lib.bat  build_lib.py  build_lib.sh  pr.c  pyproject.toml  requirements.txt  setup.py
lib/quick_algo/quick_algo/di_graph/: di_graph.pxd  di_graph.pyi  di_graph.pyx
lib/quick_algo/quick_algo/di_graph/cpp/: di_graph.hpp  di_graph_impl.cpp
lib/quick_algo/quick_algo/pagerank/: pagerank.pxd  pagerank.pyi  pagerank.pyx
lib/quick_algo/quick_algo/pagerank/cpp/: pagerank.hpp  pagerank_impl.cpp
lib/quick_algo/tests/: test_di_graph.py  test_pagerank.py
src/: config.py  embedding_store.py  entity_processing.py  ie_process.py  kg_manager.py  llm_client.py  mem_active_manager.py  open_ie.py  prompt_template.py  qa_manager.py  rag_processing.py  raw_processing.py  rdf_processing.py  utils.py
src/scripts/: text_pre_process.py
src/utils/: data_loader.py  hash.py
tests/: test_data_loader.py
useful_scripts/: text_pre_process.py
