[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3"]
build-backend = "setuptools.build_meta"

[project]
name = "quick-algo"
authors = [
    {name="Oct-autumn", email="octautumn2002@gmail.com"},
]
version = "0.1.4"
description = "A fast and efficient algorithm library for LPMM"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E.txt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
build = [
    "build",
    "cibuildwheel",
    "cython",
    "py-cpuinfo",
    "setuptools",
    "wheel",
]
test = [
    "pytest",
    "numpy",
    "scipy",
    "networkx",
]

[project.urls]
Homepage = "https://github.com/MaiM-with-u/MaiMBot-LPMM"
Issues = "https://github.com/MaiM-with-u/MaiMBot-LPMM/issues"

[tool.cibuildwheel]
build-verbosity = 1
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
repair-wheel-command = [
  "delocate-listdeps {wheel}",
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}",
]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
